2001-07-20  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_model_save): Implement.

	* replace.pl.in (xst_replace_xml_pcdata): Use xst_xml_model_save ().
	  (xst_replace_xml_attribute): Ditto.
	  (xst_replace_xml_pcdata_with_type): Ditto.
	  (xst_replace_xml_attribute_with_type): Ditto.
	  (xst_replace_xml_alchemist_print_option): Ditto.

2001-07-19  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_scan_make_kid_array): Accept '.' in attribute values.
	  (xst_xml_model_ensure): Simplify slightly.

	* parse.pl.in (xst_xml_parse_alchemist_print_option): The variable naming
	  the XML node to get attribute from was wrong.

	* replace.pl.in (xst_xml_replace_alchemist_print_option): The variable
	  naming the XML node to set attribute on was wrong.

	* print.pl.in (xst_print_remove_printer_rh71): Implement empty shell for
	  now.
	  (xst_print_get_printer_parse_table): Additions and fixes.
	  (xst_print_get_printer_replace_table): Ditto.

2001-07-19  Hans Petter Jansson  <hpj@ximian.com>

	* parse.pl.in (xst_parse_xml_child_names): Return array, not reference.
	  Fixed comparison to be against input list, not output.
	  (xst_parse_alchemist): Set args. Alchemist attr is always VALUE.
	  (xst_parse_alchemist_print): Ditto.
	  (xst_parse_alchemist_print_option): Ditto.

	* print.pl.in (xst_print_get_printer_parse_table): Some fixes, additions.

2001-07-19  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_model_get_children): Implement.
	
	* parse.pl.in (xst_parse_xml): Use new return convention of
	  xst_xml_model_scan ().
	  (xst_parse_xml_child_names): Renamed from xst_parse_xml_children ().
	  Use new return convention of xst_xml_model_scan ().
	  (xst_parse_alchemist): Implement.
	  (xst_parse_alchemist_print): Implement.
	  (xst_parse_alchemist_print_option): Implement.
		
	* replace.pl.in (xst_replace_alchemist): Add in alchemist's base data path.
	  (xst_replace_alchemist_print): Implement.